Initial Code Optimization.

--- a/Barnet Borough Credit Card Insights.ipynb
+++ b/Barnet Borough Credit Card Insights.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "# Data Manipulation.\n",
-    "from pandas import read_csv, merge, DataFrame, concat"
+    "from pandas import read_csv, DataFrame"
    ]
   },
   {
@@ -43,6 +43,7 @@
     "\n",
     "        # Iterate over each path of data stored.\n",
     "        for path in paths:\n",
+    "\n",
     "            # Add data one by one.\n",
     "            self.data = self.load_data(path)\n",
     "\n",
@@ -269,6 +270,7 @@
     "    'Data/PCard 1617.csv',\n",
     "    'Data/1718Pcard.csv'\n",
     "])\n",
+    "\n",
     "pcd.data"
    ]
   },
